--- a/miz/docker-compose.yml
+++ b/miz/docker-compose.yml
@@ -32,7 +32,9 @@ services:
       # All containers will join this network
       DOCKER_NETWORK_NAME: jupyterhub-network
       # JupyterHub will spawn this Notebook image for users
-      DOCKER_NOTEBOOK_IMAGE: quay.io/jupyter/tensorflow-notebook:latest
+      #DOCKER_NOTEBOOK_IMAGE: quay.io/jupyter/tensorflow-notebook:latest
+      # custom image needs to be available locally
+      DOCKER_NOTEBOOK_IMAGE: miz-notebook
       # Notebook directory inside user image
       DOCKER_NOTEBOOK_DIR: /home/jovyan/work
 
