--- a/miz/Dockerfile.jupyterhub
+++ b/miz/Dockerfile.jupyterhub
@@ -1,6 +1,6 @@
 # Copyright (c) Jupyter Development Team.
 # Distributed under the terms of the Modified BSD License.
-ARG JUPYTERHUB_VERSION
+ARG JUPYTERHUB_VERSION==latest
 FROM quay.io/jupyterhub/jupyterhub:$JUPYTERHUB_VERSION
 
 # Install dockerspawner, nativeauthenticator
